Fixed background because of headings visibility.

--- a/Project/Frontend/TaxiService/src/app/components/home/home.component.css
+++ b/Project/Frontend/TaxiService/src/app/components/home/home.component.css
@@ -1,5 +1,5 @@
 .jumbotron{
-  background-image: url("../../../assets/taxi-background7.jpg");
+  background-image: url("../../../assets/taxi-background8.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   background-position: center;
